[package]
name = "crossroads_cli"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]

[dependencies]
clap = "~2.32"
diesel = "~1.3"
serde = "~1.0"
serde_derive = "~1.0"
toml = "~0.4"
crossroads = { path = "../crossroads" }

[dev-dependencies]
assert_fs = "~0.10"
pretty_assertions = "~0.5"

# The development profile, used for `cargo build`
[profile.dev]
codegen-units = 4
